# pfsense_git_config

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run_pfsense_git_config.sh
.github/workflows/: release.yml
pfsense_git_config/: __init__.py  git_repo.py  main.py  pfsense_configs.py
