[tool.poetry]
name = "pfsense-git-config"
version = "0.3.0"
description = "pfSense Git Config"
authors = ["Nigel Metheringham <nigel.metheringham@gmail.com>"]
readme = "README.md"
packages = [{include = "pfsense_git_config"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
rich = "^13.4.2"
typer = "^0.9.0"
loguru = "^0.7.0"
defusedxml = "^0.7.1"
gitpython = "^3.1.31"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pfsense_git_config = "pfsense_git_config.main:app"

# ruff is a replacement for flake8
[tool.ruff]
line-length = 150
ignore = ["F821"]

# end
