[tool.poetry]
name = "pfsense-git-config"
version = "0.4.4"
description = "pfSense Git Config"
authors = ["Nigel Metheringham <nigel.metheringham@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/pfsense-git-config/"
repository = "https://github.com/nigelm/pfsense_git_config"
packages = [{include = "pfsense_git_config"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
rich = "^13.4.2"
typer = "^0.9.0"
loguru = "^0.7.0"
defusedxml = "^0.7.1"
gitpython = "^3.1.31"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.34.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pfsense_git_config = "pfsense_git_config.main:app"

# ruff is a replacement for flake8
[tool.ruff]
line-length = 150
ignore = ["F821"]

[tool.semantic_release]
## the branch below must match .gitlab-ci.yml
branch = "main"
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_pattern = [
    'README.md:Version: `(\d+\.\d+\.\d+)`',
    'pfsense_git_config/__init__.py:__version__ = "(\d+\.\d+\.\d+)"',
]
version_source = "tag"
commit_version_number = true
patch_without_tag = true
build_command = "poetry build"
upload_to_pypi = false
commit_subject = "chore: release {version}"
check_build_status = false

# end
